// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  user_id string [primary key]
  first_name string
  last_name string
  occupation string
  phone string
  email string
  dob date
  nationality string
  image1 string
  image2 string
  image3 string
  image4 string
  image5 string
  address text
  languages string[]
  password_hash string
  self_introduction text
  skill_description text
}

Table social_media {
  user_id string
  facebook string
  youtube string
  twitter string
  instagram string
  linkedin string
  dribbble string
}

Table educational_details {
  edu_id integer [primary key]
  user_id string
  degree string
  group_major string
  institution_name string
  passing_year integer
}

Table professional_details {
  prof_id integer [primary key]
  user_id string
  company_name string
  designation string
  company_website string
  work_from date
  work_till date
}

Table skills {
  skill_id integer [primary key]
  user_id string
  skill_name string
  skill_percentage integer
}

Table projects {
  project_id integer [primary key]
  user_id string
  project_name string
  project_description text
  project_image string
}

Table blogs {
  blog_id integer [primary key]
  user_id string
  blog_name string
  blog_details text
  blog_image string
  created_at timestamp
}

Table services {
  service_id integer [primary key]
  user_id string
  service_name string
  service_details text
  service_image string
}

// Relationships
Ref: social_media.user_id > users.user_id
Ref: educational_details.user_id > users.user_id
Ref: professional_details.user_id > users.user_id
Ref: skills.user_id > users.user_id
Ref: projects.user_id > users.user_id
Ref: blogs.user_id > users.user_id
Ref: services.user_id > users.user_id
